--- a/IwaProject-FrontEnd/src/app/register/register.component.html
+++ b/IwaProject-FrontEnd/src/app/register/register.component.html
@@ -12,7 +12,7 @@
     <br>
     <mat-form-field>
       <mat-label>Password</mat-label>
-      <input matInput #password required [formControl]="passwordFormControl" [errorStateMatcher]="matcher">
+      <input matInput #password required [formControl]="passwordFormControl" [errorStateMatcher]="matcher" type="password">
       <mat-hint align="end">At least 6 characters</mat-hint>
       <mat-error *ngIf="passwordFormControl.hasError('minlength') && !passwordFormControl.hasError('required')">
         Please enter a valid password
@@ -101,6 +101,12 @@
       <mat-error *ngIf="passwordFormControl.hasError('required')">Password is <strong>required</strong></mat-error>
     </mat-form-field>
     <br>
-    <button mat-raised-button color="accent">Register</button>
+    <button mat-raised-button color="accent"
+            (click)="onSubmitOrg(username.value, password.value)"
+            [disabled]="usernameFormControl.hasError('required')
+            || passwordFormControl.hasError('minlength')
+            || passwordFormControl.hasError('required')">
+      Register
+    </button>
   </form>
 </ng-template>
