--- a/IwaProject-FrontEnd/src/app/register/register.component.html
+++ b/IwaProject-FrontEnd/src/app/register/register.component.html
@@ -1,112 +1,118 @@
-<div *ngIf="isSignedUp; else signupFormBand">
+<div *ngIf="isSignedUp; else choice">
   Your registration is successful. Please login!
 </div>
 
-<ng-template #signupFormBand>
-  <form >
-    <mat-form-field>
-      <mat-label>Username</mat-label>
-      <input matInput #username required [formControl]="usernameFormControl" [errorStateMatcher]="matcher">
-      <mat-error *ngIf="usernameFormControl.hasError('required')">Username is <strong>required</strong></mat-error>
-    </mat-form-field>
-    <br>
-    <mat-form-field>
-      <mat-label>Password</mat-label>
-      <input matInput #password required [formControl]="passwordFormControl" [errorStateMatcher]="matcher" type="password">
-      <mat-hint align="end">At least 6 characters</mat-hint>
-      <mat-error *ngIf="passwordFormControl.hasError('minlength') && !passwordFormControl.hasError('required')">
-        Please enter a valid password
-      </mat-error>
-      <mat-error *ngIf="passwordFormControl.hasError('required')">Password is <strong>required</strong></mat-error>
-    </mat-form-field>
-    <br>
-    <mat-form-field>
-      <mat-label>Band Name</mat-label>
-      <input matInput #name>
-    </mat-form-field>
-    <br>
-    <mat-form-field>
-      <mat-label>Music Type</mat-label>
-      <input matInput placeholder="Ex. Metal" #musicType>
-    </mat-form-field>
-    <br>
-    <mat-form-field>
-      <mat-label>Description</mat-label>
-      <textarea matInput #desc cdkTextareaAutosize cdkAutosizeMaxRows="5"></textarea>
-    </mat-form-field>
-    <br>
-    <button mat-raised-button color="accent"
-            (click)="onSubmitBand(username.value, password.value, name.value, musicType.value, desc.value)"
-            [disabled]="usernameFormControl.hasError('required')
-            || passwordFormControl.hasError('minlength')
-            || passwordFormControl.hasError('required')">
-      Register
-    </button>
-  </form>
+<ng-template #choice>
+  <h1>What kind of user are you ?</h1>
+  <mat-button-toggle-group appearance="legacy" name="userType" aria-label="userType">
+    <mat-button-toggle value="spectator" (click)="signupType = 'spec'">Spectator</mat-button-toggle>
+    <mat-button-toggle value="band" (click)="signupType = 'band'">Band</mat-button-toggle>
+    <mat-button-toggle value="organiser" (click)="signupType = 'org'">Organiser</mat-button-toggle>
+  </mat-button-toggle-group>
 </ng-template>
 
-<ng-template #signupFormSpec>
-  <form>
-    <mat-form-field>
-      <mat-label>Username</mat-label>
-      <input matInput #username required [formControl]="usernameFormControl" [errorStateMatcher]="matcher">
-      <mat-error *ngIf="usernameFormControl.hasError('required')">Username is <strong>required</strong></mat-error>
-    </mat-form-field>
-    <br>
-    <mat-form-field>
-      <mat-label>Password</mat-label>
-      <input matInput #password required [formControl]="passwordFormControl" [errorStateMatcher]="matcher">
-      <mat-hint align="end">At least 6 characters</mat-hint>
-      <mat-error *ngIf="passwordFormControl.hasError('minlength') && !passwordFormControl.hasError('required')">
-        Please enter a valid password
-      </mat-error>
-      <mat-error *ngIf="passwordFormControl.hasError('required')">Password is <strong>required</strong></mat-error>
-    </mat-form-field>
-    <br>
-    <mat-form-field>
-      <mat-label>First Name</mat-label>
-      <input matInput #fisrtname>
-    </mat-form-field>
-    <br>
-    <mat-form-field>
-      <mat-label>Last Name</mat-label>
-      <input matInput #lastname>
-    </mat-form-field>
-    <br>
-    <button mat-raised-button color="accent"
-            (click)="onSubmitSpec(username.value, password.value, fisrtname.value, lastname.value)"
-            [disabled]="usernameFormControl.hasError('required')
-            || passwordFormControl.hasError('minlength')
-            || passwordFormControl.hasError('required')">
-      Register
-    </button>
-  </form>
-</ng-template>
 
-<ng-template #signupFormOrg>
-  <form>
-    <mat-form-field>
-      <mat-label>Username</mat-label>
-      <input matInput #username required [formControl]="usernameFormControl" [errorStateMatcher]="matcher">
-      <mat-error *ngIf="usernameFormControl.hasError('required')">Username is <strong>required</strong></mat-error>
-    </mat-form-field>
-    <br>
-    <mat-form-field>
-      <mat-label>Password</mat-label>
-      <input matInput #password required [formControl]="passwordFormControl" [errorStateMatcher]="matcher">
-      <mat-hint align="end">At least 6 characters</mat-hint>
-      <mat-error *ngIf="passwordFormControl.hasError('minlength') && !passwordFormControl.hasError('required')">
-        Please enter a valid password
-      </mat-error>
-      <mat-error *ngIf="passwordFormControl.hasError('required')">Password is <strong>required</strong></mat-error>
-    </mat-form-field>
-    <br>
-    <button mat-raised-button color="accent"
-            (click)="onSubmitOrg(username.value, password.value)"
-            [disabled]="usernameFormControl.hasError('required')
-            || passwordFormControl.hasError('minlength')
-            || passwordFormControl.hasError('required')">
-      Register
-    </button>
-  </form>
-</ng-template>
+<form *ngIf="signupType === 'band'">
+  <mat-form-field>
+    <mat-label>Username</mat-label>
+    <input matInput #username required [formControl]="usernameFormControl" [errorStateMatcher]="matcher">
+    <mat-error *ngIf="usernameFormControl.hasError('required')">Username is <strong>required</strong></mat-error>
+  </mat-form-field>
+  <br>
+  <mat-form-field>
+    <mat-label>Password</mat-label>
+    <input matInput #password required [formControl]="passwordFormControl" [errorStateMatcher]="matcher" type="password">
+    <mat-hint align="end">At least 6 characters</mat-hint>
+    <mat-error *ngIf="passwordFormControl.hasError('minlength') && !passwordFormControl.hasError('required')">
+      Please enter a valid password
+    </mat-error>
+    <mat-error *ngIf="passwordFormControl.hasError('required')">Password is <strong>required</strong></mat-error>
+  </mat-form-field>
+  <br>
+  <mat-form-field>
+    <mat-label>Band Name</mat-label>
+    <input matInput #name>
+  </mat-form-field>
+  <br>
+  <mat-form-field>
+    <mat-label>Music Type</mat-label>
+    <input matInput placeholder="Ex. Metal" #musicType>
+  </mat-form-field>
+  <br>
+  <mat-form-field>
+    <mat-label>Description</mat-label>
+    <textarea matInput #desc cdkTextareaAutosize cdkAutosizeMaxRows="5"></textarea>
+  </mat-form-field>
+  <br>
+  <button mat-raised-button color="accent"
+          (click)="onSubmitBand(username.value, password.value, name.value, musicType.value, desc.value)"
+          [disabled]="usernameFormControl.hasError('required')
+          || passwordFormControl.hasError('minlength')
+          || passwordFormControl.hasError('required')">
+    Register
+  </button>
+</form>
+
+
+<form *ngIf="signupType === 'spec'">
+  <mat-form-field>
+    <mat-label>Username</mat-label>
+    <input matInput #username required [formControl]="usernameFormControl" [errorStateMatcher]="matcher">
+    <mat-error *ngIf="usernameFormControl.hasError('required')">Username is <strong>required</strong></mat-error>
+  </mat-form-field>
+  <br>
+  <mat-form-field>
+    <mat-label>Password</mat-label>
+    <input matInput #password required [formControl]="passwordFormControl" [errorStateMatcher]="matcher">
+    <mat-hint align="end">At least 6 characters</mat-hint>
+    <mat-error *ngIf="passwordFormControl.hasError('minlength') && !passwordFormControl.hasError('required')">
+      Please enter a valid password
+    </mat-error>
+    <mat-error *ngIf="passwordFormControl.hasError('required')">Password is <strong>required</strong></mat-error>
+  </mat-form-field>
+  <br>
+  <mat-form-field>
+    <mat-label>First Name</mat-label>
+    <input matInput #fisrtname>
+  </mat-form-field>
+  <br>
+  <mat-form-field>
+    <mat-label>Last Name</mat-label>
+    <input matInput #lastname>
+  </mat-form-field>
+  <br>
+  <button mat-raised-button color="accent"
+          (click)="onSubmitSpec(username.value, password.value, fisrtname.value, lastname.value)"
+          [disabled]="usernameFormControl.hasError('required')
+          || passwordFormControl.hasError('minlength')
+          || passwordFormControl.hasError('required')">
+    Register
+  </button>
+</form>
+
+<form *ngIf="signupType === 'org'">
+  <mat-form-field>
+    <mat-label>Username</mat-label>
+    <input matInput #username required [formControl]="usernameFormControl" [errorStateMatcher]="matcher">
+    <mat-error *ngIf="usernameFormControl.hasError('required')">Username is <strong>required</strong></mat-error>
+  </mat-form-field>
+  <br>
+  <mat-form-field>
+    <mat-label>Password</mat-label>
+    <input matInput #password required [formControl]="passwordFormControl" [errorStateMatcher]="matcher">
+    <mat-hint align="end">At least 6 characters</mat-hint>
+    <mat-error *ngIf="passwordFormControl.hasError('minlength') && !passwordFormControl.hasError('required')">
+      Please enter a valid password
+    </mat-error>
+    <mat-error *ngIf="passwordFormControl.hasError('required')">Password is <strong>required</strong></mat-error>
+  </mat-form-field>
+  <br>
+  <button mat-raised-button color="accent"
+          (click)="onSubmitOrg(username.value, password.value)"
+          [disabled]="usernameFormControl.hasError('required')
+          || passwordFormControl.hasError('minlength')
+          || passwordFormControl.hasError('required')">
+    Register
+  </button>
+</form>
+
