--- a/IwaProject-FrontEnd/src/app/login/login.component.html
+++ b/IwaProject-FrontEnd/src/app/login/login.component.html
@@ -29,7 +29,8 @@
       </button>
     </form>
     <hr />
-    <p>Don't have an account?</p>
-    <a mat-button href="signup" class="btn btn-success">Sign Up</a>
+    <p>Don't have an account?
+      <a mat-raised-button href="signup" class="btn_new_account">Sign Up</a>
+    </p>
   </div>
 </ng-template>
