--- a/IwaProject-FrontEnd/src/app/app.component.html
+++ b/IwaProject-FrontEnd/src/app/app.component.html
@@ -6,13 +6,11 @@
       </button>
     <!-- Before Login -->
     <button mat-button *ngIf="!authority" [routerLink]="['/login']">Login</button>
-    <button mat-button *ngIf="!authority" class="signup-spec">SignUp as Spectator</button>
-    <button mat-button *ngIf="!authority" class="signup-org">SignUp as Organiser</button>
-    <button mat-button *ngIf="!authority" class="signup-band">SignUp as Band</button>
+    <button mat-button *ngIf="!authority" class="signup-spec" [routerLink]="['/signup']">SignUp</button>
 
     <!-- Spectator -->
-    <button mat-button *ngIf="authority === 'spec'">Festivals</button>
     <button mat-button *ngIf="authority === 'spec'">My Festivals</button>
+    <button mat-button *ngIf="authority === 'spec'">Festivals</button>
 
     <!-- Band -->
     <button mat-button *ngIf="authority === 'band'">My concerts</button>
@@ -20,7 +18,7 @@
     <!-- Organiser -->
     <button mat-button *ngIf="authority === 'org'">My Festivals</button>
 
-    <button class="logout" mat-icon-button aria-label="disconnect">
+    <button class="logout" mat-icon-button aria-label="disconnect" (dblclick)="logout()">
       <mat-icon>logout</mat-icon>
     </button>
 </mat-toolbar>
