--- a/IwaProject-FrontEnd/src/app/login/login.component.html
+++ b/IwaProject-FrontEnd/src/app/login/login.component.html
@@ -25,7 +25,7 @@
               [disabled]="usernameFormControl.hasError('required')
             || passwordFormControl.hasError('minlength')
             || passwordFormControl.hasError('required')">
-        Register
+        Login
       </button>
     </form>
     <hr />
