--- a/IwaProject-FrontEnd/src/app/band-concerts/band-concerts.component.html
+++ b/IwaProject-FrontEnd/src/app/band-concerts/band-concerts.component.html
@@ -1,1 +1,24 @@
-<p>band-concerts works!</p>
+<table mat-table [dataSource]="concertList" class="mat-elevation-z8">
+
+  <!-- Festival Column -->
+  <ng-container matColumnDef="Festival">
+    <th mat-header-cell *matHeaderCellDef> Festival </th>
+    <td mat-cell *matCellDef="let concert"> {{concert.stage.festival.festivalName}} </td>
+  </ng-container>
+
+  <!-- Date Column -->
+  <ng-container matColumnDef="Date">
+    <th mat-header-cell *matHeaderCellDef> Date </th>
+    <td mat-cell *matCellDef="let concert"> {{concert.start}} </td>
+  </ng-container>
+
+  <!-- Duration Column -->
+  <ng-container matColumnDef="Duration">
+    <th mat-header-cell *matHeaderCellDef> Duration </th>
+    <td mat-cell *matCellDef="let concert"> {{concert.duration}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
