--- a/IwaProject-FrontEnd/src/app/login/login.component.html
+++ b/IwaProject-FrontEnd/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="isLoggedIn; else loggedOut">
-  Logged in as {{roles}}.
+  <h1>Logged in as {{roles}}</h1>
 </div>
 
 <ng-template #loggedOut>
