Spectator-festival fixes

--- a/IwaProject-FrontEnd/src/app/spec-festivals/spec-festivals.component.html
+++ b/IwaProject-FrontEnd/src/app/spec-festivals/spec-festivals.component.html
@@ -13,7 +13,7 @@
   </ng-container>
 
   <!-- Order Column -->
-  <ng-container matColumnDef="">
+  <ng-container matColumnDef="Order">
     <th mat-header-cell *matHeaderCellDef>  </th>
     <td mat-cell *matCellDef="let fest">
       <button mat-raised-button color="accent" (click)="addFest(fest.id)">Order</button>
