--- a/IwaProject-FrontEnd/src/app/app.component.html
+++ b/IwaProject-FrontEnd/src/app/app.component.html
@@ -9,7 +9,7 @@
     <button mat-button *ngIf="!authority" class="signup-spec" [routerLink]="['/signup']">SignUp</button>
 
     <!-- Spectator -->
-    <button mat-button *ngIf="authority === 'spec'" >My Festivals</button>
+    <button mat-button *ngIf="authority === 'spec'" [routerLink]="['/specOwnFest']">My Festivals</button>
     <button mat-button *ngIf="authority === 'spec'" [routerLink]="['/specFest']">Festivals</button>
 
     <!-- Band -->
