New Fest dialog

--- a/IwaProject-FrontEnd/src/app/register/register.component.html
+++ b/IwaProject-FrontEnd/src/app/register/register.component.html
@@ -41,7 +41,7 @@
   <br>
   <mat-form-field>
     <mat-label>Description</mat-label>
-    <textarea matInput #desc cdkTextareaAutosize cdkAutosizeMaxRows="5"></textarea>
+    <textarea matInput #desc cdkTextareaAutosize cdkAutosizeMaxRows="5" maxlength="250"></textarea>
   </mat-form-field>
   <br>
   <button mat-raised-button color="accent"
