--- a/IwaProject-FrontEnd/src/app/org-fest/org-fest.component.html
+++ b/IwaProject-FrontEnd/src/app/org-fest/org-fest.component.html
@@ -18,8 +18,8 @@
     <td mat-cell *matCellDef="let fest"> {{fest.description}} </td>
   </ng-container>
 
-  <!-- Order Column -->
-  <ng-container matColumnDef="Order">
+  <!-- Remove Column -->
+  <ng-container matColumnDef="Remove">
     <th mat-header-cell *matHeaderCellDef>  </th>
     <td mat-cell *matCellDef="let fest">
       <button mat-mini-fab color="warn" (click)="delFest(fest.id)" aria-label="remove button">
@@ -32,6 +32,6 @@
   <tr mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="test()" class="festRaw"></tr>
 </table>
 
-<button mat-raised-button color="accent" (click)="addFest()" class="addButton">
+<button mat-raised-button color="accent" (click)="openDialog()" class="addButton">
   Add
 </button>
