--- a/IwaProject-FrontEnd/src/app/fest-dialog/fest-dialog.component.html
+++ b/IwaProject-FrontEnd/src/app/fest-dialog/fest-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Festival register</h2>
+<h2 mat-dialog-title>{{title}}</h2>
 
 <mat-dialog-content [formGroup]="form">
   <mat-form-field>
