--- a/IwaProject-FrontEnd/src/app/org-fest/org-fest.component.html
+++ b/IwaProject-FrontEnd/src/app/org-fest/org-fest.component.html
@@ -13,9 +13,19 @@
   </ng-container>
 
   <!-- Desc Column -->
-  <ng-container matColumnDef="Descritpion">
-    <th mat-header-cell *matHeaderCellDef> Descritpion </th>
+  <ng-container matColumnDef="Description">
+    <th mat-header-cell *matHeaderCellDef> Description </th>
     <td mat-cell *matCellDef="let fest"> {{fest.description}} </td>
+  </ng-container>
+
+  <!-- Modify Column -->
+  <ng-container matColumnDef="Modify">
+    <th mat-header-cell *matHeaderCellDef>  </th>
+    <td mat-cell *matCellDef="let fest">
+      <button mat-mini-fab color="accent" (mousedown)="openDialogModify(fest)" aria-label="modify button">
+        <mat-icon>create</mat-icon>
+      </button>
+    </td>
   </ng-container>
 
   <!-- Remove Column -->
@@ -32,6 +42,6 @@
   <tr mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="test()" class="festRaw"></tr>
 </table>
 
-<button mat-raised-button color="accent" (click)="openDialog()" class="addButton">
+<button mat-raised-button color="accent" (click)="openDialogNew()" class="addButton">
   Add
 </button>
