Add Org Stage view + stage dialog

--- a/IwaProject-FrontEnd/src/app/org-stage/org-stage.component.css
+++ b/IwaProject-FrontEnd/src/app/org-stage/org-stage.component.css
@@ -16,3 +16,9 @@ mat-form-field, .addButton{
 .bntAction2{
   margin-left: 1rem;
 }
+
+.btnHome{
+  position: absolute;
+  right: 2rem;
+  margin-top: 1rem;
+}
