--- a/IwaProject-FrontEnd/src/app/org-stage/org-stage.component.html
+++ b/IwaProject-FrontEnd/src/app/org-stage/org-stage.component.html
@@ -9,34 +9,33 @@
   <!-- Name Column -->
   <ng-container matColumnDef="Name">
     <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let fest"> {{fest.festivalName}} </td>
-  </ng-container>
-
-  <!-- Desc Column -->
-  <ng-container matColumnDef="Description">
-    <th mat-header-cell *matHeaderCellDef> Description </th>
-    <td mat-cell *matCellDef="let fest"> {{fest.description}} </td>
+    <td mat-cell *matCellDef="let stage"> {{stage.name}} </td>
   </ng-container>
 
   <!-- Action Column -->
   <ng-container matColumnDef="Action">
     <th mat-header-cell *matHeaderCellDef>  </th>
-    <td mat-cell *matCellDef="let fest" align="right">
-      <button mat-mini-fab color="accent" (mousedown)="openDialogModify(fest)" aria-label="modify button">
+    <td mat-cell *matCellDef="let stage" align="right">
+      <button mat-mini-fab color="accent" aria-label="modify button"
+              (mousedown)="openDialogModify(stage)">
         <mat-icon>create</mat-icon>
       </button>
 
       <button mat-mini-fab color="warn" aria-label="remove button" class="bntAction2"
-              (click)="delFest(fest.id)">
+              (click)="delStage(stage.id)">
         <mat-icon>close</mat-icon>
       </button>
     </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let fest; columns: displayedColumns;" (dblclick)="lookFestStages(fest)" class="festRaw"></tr>
+  <tr mat-row *matRowDef="let stage; columns: displayedColumns;" (dblclick)="lookStageConcerts(stage)" class="festRaw"></tr>
 </table>
 
 <button mat-raised-button color="accent" (click)="openDialogNew()" class="addButton">
   Add
+</button>
+
+<button mat-raised-button color="primary" [routerLink]="['/home']" class="btnHome">
+  Go back to home
 </button>
