few changes on spec views

--- a/IwaProject-FrontEnd/src/app/spectator-views/spec-own-festivals/spec-own-festivals.component.html
+++ b/IwaProject-FrontEnd/src/app/spectator-views/spec-own-festivals/spec-own-festivals.component.html
@@ -15,7 +15,7 @@
   <!-- Cancel Column -->
   <ng-container matColumnDef="Cancel">
     <th mat-header-cell *matHeaderCellDef>  </th>
-    <td mat-cell *matCellDef="let fest">
+    <td mat-cell *matCellDef="let fest" align="right">
       <button mat-mini-fab color="warn" (click)="delFest(fest.id)" aria-label="remove button">
         <mat-icon>close</mat-icon>
       </button>
