--- a/IwaProject-FrontEnd/src/app/spectator-views/spec-festivals/spec-festivals.component.html
+++ b/IwaProject-FrontEnd/src/app/spectator-views/spec-festivals/spec-festivals.component.html
@@ -21,7 +21,7 @@
   <!-- Order Column -->
   <ng-container matColumnDef="Order">
     <th mat-header-cell *matHeaderCellDef>  </th>
-    <td mat-cell *matCellDef="let fest">
+    <td mat-cell *matCellDef="let fest" align="right">
       <button mat-raised-button color="accent" (click)="addFest(fest.id)">Order</button>
     </td>
   </ng-container>
