Concert Org view

--- a/IwaProject-FrontEnd/src/app/dialogs/concert-dialog/concert-dialog.component.html
+++ b/IwaProject-FrontEnd/src/app/dialogs/concert-dialog/concert-dialog.component.html
@@ -14,8 +14,8 @@
   <br>
   <mat-form-field>
     <mat-label>Band</mat-label>
-    <mat-select>
-      <mat-option *ngFor="let band of bands" [value]="band.id">
+    <mat-select formControlName="bandId">
+      <mat-option *ngFor="let band of bands" [value]="band.id" (onSelectionChange)="selectBand(band.id)">
         {{band.name}}
       </mat-option>
     </mat-select>
